# pdf_combiner

./: .codecov.yml  .gitattributes  .gitignore  .metadata  CHANGELOG.md  Package.swift  README.md  action.yml  package-lock.json  pubspec.yaml
.github/workflows/: android_integration_test.yml  dart.yml  dart_analyze_unit_test.yml  deploy-web.yml  ios_integration_test.yml  linux_integration_test.yml  macos_integration_test.yml  windows_integration_test.yml
android/: build.gradle  build.gradle.kts  proguard-rules.pro  settings.gradle
android/src/main/: AndroidManifest.xml
example/: .gitignore  README.md  pubspec.yaml
example/.github/workflows/: deploy-web.yml
example/android/app/: build.gradle  build.gradle.kts
example/assets/: image_3.heic
example/integration_test/: create_image_from_pdf_integration_test.dart  create_pdf_from_multiple_images_integration_test.dart  heic_test.dart  integration_test.dart  merge_files_test.dart  merge_multiple_pdfs_integration_test.dart  plugin_integration_test.dart  test_file_helper.dart
example/ios/: .gitignore  Podfile
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart  pdf_combiner_example.dart
example/lib/models/: input_source_type.dart
example/lib/utils/: custom_logs.dart  theme.dart  uint8list_extension.dart
example/lib/view_models/: pdf_combiner_view_model.dart
example/lib/views/: old_screen.dart  pdf_combiner_screen.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/: .gitignore  Podfile
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/test/: pdf_combiner_method_channel_test.dart  pdf_combiner_test.dart  widget_test.dart
example/test_driver/: integration_test_driver.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
ios/: Package.swift  pdf_combiner.podspec
ios/Classes/: PdfCombinerPlugin.swift  UIImageExtension.swift
ios/pdf_combiner/: Package.swift
lib/: document_utils.dart  document_utils_selector.dart  pdf_combiner.dart  pdf_combiner_delegate.dart  pdf_combiner_method_channel.dart  pdf_combiner_platform_interface.dart  pdf_combiner_web.dart
lib/communication/: pdf_combiner_method_channel.dart  pdf_combiner_platform_interface.dart  pdf_combiner_status.dart
lib/exception/: pdf_combiner_exception.dart
lib/isolates/: create_images_from_pdf_isolate.dart  images_from_pdf_isolate.dart  merge_pdfs_isolate.dart  pdf_from_multiple_images_isolate.dart
lib/models/: image_compression.dart  image_from_pdf_config.dart  image_quality.dart  image_scale.dart  merge_input.dart  merge_input_type.dart  pdf_from_multiple_image_config.dart  pdf_source.dart
lib/responses/: build_info_response.dart  generate_pdf_from_documents_response.dart  image_from_pdf_response.dart  merge_multiple_pdf_response.dart  pdf_combiner_messages.dart  pdf_combiner_status.dart  pdf_from_multiple_image_response.dart  size_from_path_response.dart  status.dart
lib/utils/: document_utils.dart  document_utils_base.dart  document_utils_io.dart  document_utils_selector.dart  document_utils_web.dart  string_extension.dart
lib/web/: document_utils_web.dart  list_to_js_array_extension.dart  pdf_combiner_web_bindings.dart
linux/: CMakeLists.txt  pdf_combiner_plugin.cc  pdf_combiner_plugin_private.h
linux/test/: pdf_combiner_plugin_test.cc
macos/: pdf_combiner.podspec
macos/Classes/: NSImageExtension.swift  PdfCombinerPlugin.swift  StringExtension.swift
macos/pdf_combiner/: Package.swift
test/: document_utils_bytes_test.dart  document_utils_test.dart  generate_pdf_from_documents_response_test.dart  image_compression_test.dart  image_from_pdf_config_test.dart  image_from_pdf_response_test.dart  image_scale_test.dart  images_from_pdf_isolate_test.dart  merge_input_additional_test.dart  merge_input_test.dart  merge_multiple_pdf_response_test.dart  merge_pdfs_isolate_coverage_test.dart  pdf_combiner_combine_error_test.dart  pdf_combiner_combine_test.dart  pdf_combiner_create_images_from_pdf_test.dart  pdf_combiner_create_pdf_from_multiple_images_test.dart  pdf_combiner_from_documents_test.dart  pdf_combiner_generate_from_documents_test.dart  pdf_combiner_image_compression_test.dart  pdf_combiner_image_quality_test.dart  pdf_combiner_image_scale_test.dart  pdf_combiner_merge_error_response_test.dart  pdf_combiner_messages_test.dart  pdf_combiner_method_channel_additional_test.dart  pdf_combiner_method_channel_error_test.dart  pdf_combiner_method_channel_test.dart  pdf_combiner_pdf_generation_test.dart  pdf_combiner_test.dart  pdf_combiner_web_simulation_test.dart  pdf_from_multiple_image_config_test.dart  pdf_from_multiple_image_response_test.dart  pdf_source_test.dart  string_extension_test.dart  test_pdf_combiner.dart
test/integration/: create_image_from_pdf_integration_test.dart  create_pdf_from_multiple_images_integration_test.dart  merge_multiple_pdfs_integration_test.dart  pdf_combiner_test.dart
test/integration_test/: create_image_from_pdf_integration_test.dart  create_pdf_from_multiple_images_integration_test.dart  merge_multiple_pdfs_integration_test.dart
test/mocks/: mock_document_utils.dart  mock_pdf_combiner.dart  mock_pdf_combiner_platform.dart  mock_pdf_combiner_platform_with_error.dart  mock_pdf_combiner_platform_with_exception.dart  pdf_combiner_status_test.dart
test/unit/: pdf_combiner_method_channel_test.dart  pdf_combiner_test.dart
test/unit_test/: pdf_combiner_test.dart
test/utils/: document_utils_io_test.dart
windows/: CMakeLists.txt  libde265.lib  libx265.lib  pdf_combiner_plugin.cpp  pdf_combiner_plugin.h  pdf_combiner_plugin_c_api.cpp  save_bitmap_to_png.cpp  stb_implementation.cpp
windows/include/libheif/: de265.h  heif.lib  heif_library.h  heif_version.h
windows/include/pdf_combiner/: my_file_write.h  pdf_combiner_plugin.h  pdf_combiner_plugin_c_api.h  save_bitmap_to_png.h
windows/test/: pdf_combiner_plugin_test.cpp
(+34 files in other folders)
